# The-N-body-Problem

./: .gitignore  BUILD.md  CMakeLists.txt  FIXES_AND_IMPROVEMENTS.md  GPU_QUICKSTART.md  Makefile  README.md  REPORT_NBODY_PARALLEL.docx  benchmark.py  nbody_gpu.sh  nbody_gui.py  nbody_openmp  nbody_serial  run_benchmarks.sh  trajectory_viewer.py  two_body_solver
Common/include/: body.h  common.h  trajectory_writer.h  vector3.h
Common/src/: Vector3.cpp  body.cpp
N-body-Numerical-Solution/src/: nbody_openmp.cpp  nbody_serial.cpp  nbody_sycl.cpp
The N-body Problem Numerical Solution/src/: nbody_openmp.cpp  nbody_serial.cpp  nbody_sycl.cpp
The Two-body Problem Analytical Solution/include/: two_body_solver.h
The Two-body Problem Analytical Solution/src/: test_main.cpp  two_body_solver.cpp
Two-body-Analytical-Solution/src/: test_main.cpp  two_body_main.cpp  two_body_solver.cpp
benchmark_results/: benchmark_results.csv  single_runs.csv
configs/: random_1000_seed_1234567.bodies.csv  random_100_seed_1234567.bodies.csv
